Added support for HTTPS on the host
Sextant can now operate on tomcat installation with HTTPS